huddle-landing-page-679023-master/index.css
* {
  font-family: 'Heebo', sans-serif;
  color: white;
}

body {
  margin: 0;
}

.margin-adjust {
  margin: 0 2%;
}

.root {  
  height: 100vh;
  background-image: url("./images/bg-desktop.svg");
  background-size: cover;
  background-position: center;
  background-color: #6535B3;

  display: flex;
  flex-direction: column;
  justify-content: center;
}

.logo-wrapper {
  padding-bottom: 50px;
}

.content-section {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 60px;
}

.illustration-img {
  width: 90%;
}

.text-wrapper {
  width: 50%;
}

.text-title {
  font-size: 3.3rem;
  margin-bottom: 20px;
  margin-top: 0;
  width: 80%;
}

.text-paragraph {
  width: 80%;
  font-size: 16px;
}

.register-button {
  color: #543F71;  
  cursor: pointer;
  padding: 17px 69px;
  border-radius: 30px;
  font-size: 1.1rem;
  -webkit-box-shadow: 1px 5px 5px 1px rgba(0,0,0,0.75);
  -moz-box-shadow: 1px 5px 5px 1px rgba(0,0,0,0.75);
  box-shadow: 1px 5px 5px 1px rgba(0,0,0,0.75);
}

.logo-footer {
  display: flex;
  margin: 0 12%;
  flex-direction: row;
  justify-content: flex-end;
  margin-bottom: 10%;
}

.svg-styling {
  width: 24px;
  cursor: pointer;
  border-radius: 50%;
  height: 24px;
  border: 2px solid white;
  padding: 7px;
  margin-right: 10px;  
}

@media screen and (max-width: 800px) {

  .root {
    height: auto;
    background-image: url("./images/bg-mobile.svg");
  }

  .margin-adjust {
    margin: 0;
  }

  .logo-wrapper {
    margin-top: 5%;
    padding-bottom: 0;
  }

  .content-section {
    margin-bottom: 100px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 60px;
  }

  .illustration-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .text-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
    margin-top: 50px;
  }

  .text-title {     
    font-size: 1.7rem;
    margin-bottom: 20px;
    margin-top: 0;
    width: 80%;
  }

  .register-button {
    padding: 12px 99px;
  }

  .logo-footer {
    display: flex;
    margin: 0 12%;
    flex-direction: row;
    justify-content: space-evenly;
    margin-bottom: 5%;
  }
  
}

